--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
+    "@emailjs/browser": "^3.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@material-tailwind/react": "^2.0.0",
     "chart.js": "^4.3.0",
     "emailjs": "^4.0.2",
+    "framer-motion": "^11.11.17",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie-player": "^2.1.0",
     "react-router-dom": "^6.11.1",
     "react-svg": "^16.1.11",
     "react-toastify": "^9.1.3",
